2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkButton.c: [Bug 1923684]: If a checkbutton offvalue is
	the same as the tristate value we should use the off state in
	preference. (andrey gusev)

2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinSend.c: FormatMessage should always use the ignore-inserts
	* win/tkWinTest.c: flag when processing system errors.

	* generic/tkFont.c: [Bug 2791352] handle parsing of type 5 font
	* tests/font.test: descriptions with hyphenated family name.

2009-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/images/lamp.svg: Added an SVG version of the Tk lamp and
	* library/images/lamp.png: a pre-rendered PNG version.
	* win/rc/wish.ico: Wish gets a new icon using the SVG lamp and the
	* win/rc/tk.ico:   tk dll gets the tcl rendered feather. This
	provides improved icons for Vista/Windows 7.

2009-05-05  Donal K. Fellows  <dkf@users.sf.net>

	* doc/MainWin.3 (Tk_GetNumMainWindows): [Bug 487220]: Clarified that
	this function works per-thread, not per-process.

	* doc/canvas.n (scale): [Bug 1832015]: Clarified that [$c scale] only
	affects item coordinates.

2009-05-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/3DBorder.3, doc/BindTable.3, doc/CanvPsY.3, doc/Clipboard.3:
	* doc/ConfigWidg.3, doc/CrtWindow.3, doc/GetBitmap.3:
	* doc/GetCapStyl.3, doc/GetImage.3, doc/GetJoinStl.3, doc/GetScroll.3:
	* doc/GetSelect.3, doc/GetVisual.3, doc/MainWin.3, doc/Name.3:
	* doc/ParseArgv.3, doc/TextLayout.3, doc/Tk_Init.3: [Bug 2431507]:
	Purge all mention of the now-obsolete 'interp->result'.

2009-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinWm.c (UpdateWrapper): [Bug 2785744]: Manipulate flag bit
	correctly so that menubar updates can't smash other attributes.

2009-05-01  Donal K. Fellows  <dkf@users.sf.net>

	* library/mkpsenc.tcl (DrawText): [Bug 2777019]: Corrected point of
	application of rotation transform so rotation is about the anchor
	point of the text.
